--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -3,4 +3,34 @@
     <string name="title_groups">Groups</string>
     <string name="title_schedules">Schedules</string>
     <string name="title_players">Players</string>
+    <string name="title_courts">Courts</string>
+
+    <string-array name="days_of_week">
+        <item>Sunday</item>
+        <item>Monday</item>
+        <item>Tuesday</item>
+        <item>Wednesday</item>
+        <item>Thursday</item>
+        <item>Friday</item>
+        <item>Saturday</item>
+    </string-array>
+
+    <string-array name="recurrence_options">
+        <item>None</item>
+        <item>Daily</item>
+        <item>Weekly</item>
+        <item>Bi-Weekly</item>
+        <item>Monthly</item>
+    </string-array>
+
+    <string-array name="game_type_options">
+        <item>Singles</item>
+        <item>Doubles</item>
+    </string-array>
+
+    <string-array name="availability_options">
+        <item>Permanent</item>
+        <item>Rotation</item>
+        <item>Backup</item>
+    </string-array>
 </resources>
